@@ -125,6 +125,8 @@ void slow_candidates_seek (hashcat_ctx_t *hashcat_ctx, void *extra_info, const u
       {
         line_len = (u32) fgetl (combs_fp, line_buf, HCBUFSIZ_LARGE);
 
+        line_len = convert_from_hex (hashcat_ctx, line_buf, line_len);
+
         // post-process rule engine
 
         if (run_rule_engine ((int) user_options_extra->rule_len_l, user_options->rule_buf_l))
@@ -179,8 +181,6 @@ void slow_candidates_next (hashcat_ctx_t *hashcat_ctx, void *extra_info)
         HCFILE *fp = &extra_info_straight->fp;
 
         get_next_word (hashcat_ctx, fp, &line_buf, &line_len);
-
-        line_len = (u32) convert_from_hex (hashcat_ctx, line_buf, line_len);
 
         // post-process rule engine
 
@@ -250,21 +250,22 @@ void slow_candidates_next (hashcat_ctx_t *hashcat_ctx, void *extra_info)
       {
         get_next_word (hashcat_ctx, base_fp, &line_buf, &line_len);
 
-        line_len = (u32) convert_from_hex (hashcat_ctx, line_buf, line_len);
-
         // post-process rule engine
+
+        char rule_buf_out[RP_PASSWORD_SIZE];
 
         if (run_rule_engine ((int) user_options_extra->rule_len_l, user_options->rule_buf_l))
         {
           if (line_len >= RP_PASSWORD_SIZE) continue;
-
-          char rule_buf_out[RP_PASSWORD_SIZE];
 
           memset (rule_buf_out, 0, sizeof (rule_buf_out));
 
           const int rule_len_out = _old_apply_rule (user_options->rule_buf_l, (int) user_options_extra->rule_len_l, line_buf, (int) line_len, rule_buf_out);
 
           if (rule_len_out < 0) continue;
+
+          line_buf = rule_buf_out;
+          line_len = (u32) rule_len_out;
         }
 
         break;
@@ -287,6 +288,8 @@ void slow_candidates_next (hashcat_ctx_t *hashcat_ctx, void *extra_info)
     while (1)
     {
       line_len = (u32) fgetl (combs_fp, line_buf, HCBUFSIZ_LARGE);
+
+      line_len = convert_from_hex (hashcat_ctx, line_buf, line_len);
 
       // post-process rule engine
 
